# src/modules/settings/schema/user-settings.schema.ts
@@ -10,6 +10,9 @@ export interface UserSettingsDocument {
   userId: Types.ObjectId;
   libraryVisibility: LibraryVisibility;
   activityVisibility: ActivityVisibility;
+  telegramNotifications: {
+    friendRequests: boolean;
+  };
   createdAt: Date;
   updatedAt: Date;
 }
@@ -30,6 +33,20 @@ export const UserSettingsSchema = new Schema<UserSettingsDocument>(
       type: String,
       enum: Object.values(ActivityVisibility),
       default: ActivityVisibility.Private,
+      required: true,
+    },
+    telegramNotifications: {
+      type: new Schema(
+        {
+          friendRequests: {
+            type: Boolean,
+            default: false,
+            required: true,
+          },
+        },
+        { _id: false },
+      ),
+      default: () => ({ friendRequests: false }),
       required: true,
     },
   },
